# esp32-wifi-ap-cp

./: .gitignore  CMakeLists.txt  PROJECT_CONTEXT.md  PWA_LINKING_CONTRACT.md  README.md  SYSTEM_ARCHITECTURE.md  partitions_example.csv  platformio.ini  read_boot.ps1  sdkconfig  test.html
.claude/: settings.local.json
components/cmd_router/: cmd_router.c  router_globals.h
main/: CMakeLists.txt  admin_ports.c  admin_ports.h  battery_sensor.c  battery_sensor.h  client_acl.c  client_acl.h  dns_server.c  dns_server.h  eco_metrics.c  eco_metrics.h  esp32_nat_router.c  http_server.c  lwip_hooks.c  lwip_hooks.h  net_diag.c  net_diag.h  pages.h  port_sensors.c  port_sensors.h  pzem_reader.c  pzem_reader.h  rfid_reader.c  rfid_reader.h  supabase_client.c  supabase_client.h
supabase/: 001_schema.sql  001_session_linking.sql  002_port_state_sensor_metrics.sql  002_session_freshness.sql  003_station_state_battery_telemetry.sql  004_station_state_ac_telemetry.sql  005_eco_metrics_telemetry.sql
