# The following lines of boilerplate have to be in your project's CMakeLists
# in this exact order for cmake to work correctly
cmake_minimum_required(VERSION 3.16)

set(PROJECT_SUPABASE_BASE_URL "" CACHE INTERNAL "" FORCE)
set(PROJECT_SUPABASE_API_KEY "" CACHE INTERNAL "" FORCE)
set(PROJECT_ADMIN_USERNAME "admin" CACHE INTERNAL "" FORCE)
set(PROJECT_ADMIN_PASSWORD "admin123" CACHE INTERNAL "" FORCE)
set(PROJECT_PORT_SENSORS_ENABLED "0" CACHE INTERNAL "" FORCE)
set(PROJECT_PORT_SENSORS_SUPABASE_SYNC_ENABLED "0" CACHE INTERNAL "" FORCE)
set(PROJECT_PORT_IN_USE_THRESHOLD_MA "" CACHE INTERNAL "" FORCE)
set(PROJECT_BATTERY_SENSOR_ENFORCE_THRESHOLDS "1" CACHE INTERNAL "" FORCE)
set(PROJECT_RFID_ENFORCE_AUTH "1" CACHE INTERNAL "" FORCE)

set(PROJECT_ENV_FILE "${CMAKE_CURRENT_LIST_DIR}/.env")
if(EXISTS "${PROJECT_ENV_FILE}")
    file(STRINGS "${PROJECT_ENV_FILE}" PROJECT_ENV_LINES)
    foreach(PROJECT_ENV_LINE IN LISTS PROJECT_ENV_LINES)
        string(STRIP "${PROJECT_ENV_LINE}" PROJECT_ENV_LINE)
        if(PROJECT_ENV_LINE STREQUAL "" OR PROJECT_ENV_LINE MATCHES "^#")
            continue()
        endif()

        if(PROJECT_ENV_LINE MATCHES "^SUPABASE_BASE_URL=(.*)$")
            set(PROJECT_SUPABASE_BASE_URL "${CMAKE_MATCH_1}" CACHE INTERNAL "" FORCE)
        elseif(PROJECT_ENV_LINE MATCHES "^SUPABASE_API_KEY=(.*)$")
            set(PROJECT_SUPABASE_API_KEY "${CMAKE_MATCH_1}" CACHE INTERNAL "" FORCE)
        elseif(PROJECT_ENV_LINE MATCHES "^ADMIN_USERNAME=(.*)$")
            set(PROJECT_ADMIN_USERNAME "${CMAKE_MATCH_1}" CACHE INTERNAL "" FORCE)
        elseif(PROJECT_ENV_LINE MATCHES "^ADMIN_PASSWORD=(.*)$")
            set(PROJECT_ADMIN_PASSWORD "${CMAKE_MATCH_1}" CACHE INTERNAL "" FORCE)
        elseif(PROJECT_ENV_LINE MATCHES "^PORT_SENSORS_ENABLED=(.*)$")
            set(PROJECT_PORT_SENSORS_ENABLED "${CMAKE_MATCH_1}" CACHE INTERNAL "" FORCE)
        elseif(PROJECT_ENV_LINE MATCHES "^PORT_SENSORS_SUPABASE_SYNC_ENABLED=(.*)$")
            set(PROJECT_PORT_SENSORS_SUPABASE_SYNC_ENABLED "${CMAKE_MATCH_1}" CACHE INTERNAL "" FORCE)
        elseif(PROJECT_ENV_LINE MATCHES "^PORT_IN_USE_THRESHOLD_MA=(.*)$")
            set(PROJECT_PORT_IN_USE_THRESHOLD_MA "${CMAKE_MATCH_1}" CACHE INTERNAL "" FORCE)
        elseif(PROJECT_ENV_LINE MATCHES "^BATTERY_SENSOR_ENFORCE_THRESHOLDS=(.*)$")
            set(PROJECT_BATTERY_SENSOR_ENFORCE_THRESHOLDS "${CMAKE_MATCH_1}" CACHE INTERNAL "" FORCE)
        elseif(PROJECT_ENV_LINE MATCHES "^RFID_ENFORCE_AUTH=(.*)$")
            set(PROJECT_RFID_ENFORCE_AUTH "${CMAKE_MATCH_1}" CACHE INTERNAL "" FORCE)
        endif()
    endforeach()
endif()

if(DEFINED ENV{PORT_SENSORS_ENABLED})
    set(PROJECT_PORT_SENSORS_ENABLED "$ENV{PORT_SENSORS_ENABLED}" CACHE INTERNAL "" FORCE)
endif()

if(DEFINED ENV{PORT_SENSORS_SUPABASE_SYNC_ENABLED})
    set(PROJECT_PORT_SENSORS_SUPABASE_SYNC_ENABLED "$ENV{PORT_SENSORS_SUPABASE_SYNC_ENABLED}" CACHE INTERNAL "" FORCE)
endif()

if(DEFINED ENV{PORT_IN_USE_THRESHOLD_MA})
    set(PROJECT_PORT_IN_USE_THRESHOLD_MA "$ENV{PORT_IN_USE_THRESHOLD_MA}" CACHE INTERNAL "" FORCE)
endif()

if(DEFINED ENV{BATTERY_SENSOR_ENFORCE_THRESHOLDS})
    set(PROJECT_BATTERY_SENSOR_ENFORCE_THRESHOLDS "$ENV{BATTERY_SENSOR_ENFORCE_THRESHOLDS}" CACHE INTERNAL "" FORCE)
endif()

if(DEFINED ENV{RFID_ENFORCE_AUTH})
    set(PROJECT_RFID_ENFORCE_AUTH "$ENV{RFID_ENFORCE_AUTH}" CACHE INTERNAL "" FORCE)
endif()

if(PROJECT_SUPABASE_BASE_URL STREQUAL "")
    message(WARNING "SUPABASE_BASE_URL is not set. Add it to .env before building.")
endif()

if(PROJECT_SUPABASE_API_KEY STREQUAL "")
    message(WARNING "SUPABASE_API_KEY is not set. Session writes to Supabase will fail until a real key is provided via .env.")
endif()

include($ENV{IDF_PATH}/tools/cmake/project.cmake)
project(esp32_nat_router)

# Work around Windows builds that sometimes lose the generated esp_system
# linker-script search path and emit -L"", which breaks -T memory.ld.
# Link libphy/librtc by full path as an additional safeguard for the same
# Windows linker path-resolution issue.
idf_build_get_property(PROJECT_EXECUTABLE EXECUTABLE)
idf_build_get_property(IDF_TARGET IDF_TARGET)
set(ESP_PHY_LIB_DIR "$ENV{IDF_PATH}/components/esp_phy/lib/${IDF_TARGET}")
set(ESP_PHY_STAGE_DIR "${CMAKE_BINARY_DIR}/esp-idf/esp_phy/prebuilt")
file(MAKE_DIRECTORY "${ESP_PHY_STAGE_DIR}")
file(COPY
    "${ESP_PHY_LIB_DIR}/libphy.a"
    "${ESP_PHY_LIB_DIR}/librtc.a"
    DESTINATION "${ESP_PHY_STAGE_DIR}"
)
target_link_options(${PROJECT_EXECUTABLE} PRIVATE
    "-Lesp-idf/esp_system"
    "-Lesp-idf/esp_system/ld"
    "-Lesp-idf/esp_phy/prebuilt"
)
target_link_libraries(${PROJECT_EXECUTABLE} PRIVATE
    "${ESP_PHY_LIB_DIR}/libphy.a"
    "${ESP_PHY_LIB_DIR}/librtc.a"
)

spiffs_create_partition_image(storage spiffs_image FLASH_IN_PROJECT)
